	PR target/19819 	* pa.h (GO_IF_LEGITIMATE_ADDRESS): Allow allow hard registers during 	and after reload in REG+REG indexed addresses without REG_POINTER 	set in the base and not set in the index.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@95729 138bc75d-0d04-0410-961f-82ee72b054a4